# book-of-stars

./: .gitignore  Cargo.toml  README.md  diesel.toml  sample.env  schema.patch
legacy-loader/: Cargo.toml
legacy-loader/src/: main.rs
migrations/2020-05-22-034223_create_quoth_table/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
stars-lib/: Cargo.toml
stars-lib/src/: lib.rs  models.rs
