[package]
name = "book_of_stars"
version = "0.1.0"
authors = ["hyena <hyena@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
