[package]
name = "legacy-loader"
version = "0.1.0"
authors = ["hyena <hyena@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"] }
regex = "1.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stars-lib = { path = "../stars-lib" }
toml = "0.5.6"
